--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,10 @@
 </head>
 <body>
   <div class="container">
-    <input type="text" id="searchInput" placeholder="搜索书签...">
+    <div class="search-container">
+      <input type="text" id="searchInput" placeholder="搜索书签...">
+      <button id="openBookmarksButton">谷歌书签表</button>
+    </div>
     <div id="bookmarkList"></div>
   </div>
   <script src="popup.js"></script>
