--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,14 @@
 <body>
   <div class="container">
     <div class="search-container">
-      <input type="text" id="searchInput" placeholder="搜索书签...">
+      <div class="search-input-wrapper">
+        <input type="text" id="searchInput" placeholder="搜索书签...">
+        <button id="searchModeToggle" class="search-mode-toggle" title="包含文件夹搜索">
+          <svg class="folder-icon" viewBox="0 0 24 24" width="18" height="18">
+            <path d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"/>
+          </svg>
+        </button>
+      </div>
       <button id="openBookmarksButton">谷歌书签表</button>
     </div>
     <div id="bookmarkList"></div>
